Apply text-align: right to the parametric graph cell, it looks better when there's really large parametric counts. Avoiding using &:extend since that seems to generate multiple matching selectors, one of which is redundant and has its value overwritten by the other.

--- a/webapp/core/src/main/less/app-include.less
+++ b/webapp/core/src/main/less/app-include.less
@@ -1585,6 +1585,7 @@ input.find-input {
 
 .parametric-value-graph-cell {
   width: @custom3;
+  text-align: right;
 }
 
 .parametric-value-count,.parametric-value-graph {
